# AdvanceML

./: .gitignore  README.md  eda_charts.py  main.py  pyproject.toml
src/: clean_data.py
src/activity1/: clean_data.py  config.py  download_data.py  eda_plots.py  main.py
src/activity1/data/: __init__.py  clean.py  download.py  loader.py
src/activity1/eda/: plots.py
src/activity1/evaluation/: backtesting.py  metrics.py  plots.py  style.py
src/activity1/models/: base.py  baselines.py  chronos.py  lstm.py  sarimax.py
src/activity1/pipelines/: finetune_chronos.py  run_all.py  run_baselines.py  run_chronos.py  run_lstm.py  run_multi_horizon.py  run_sarimax.py  tune_lstm.py
src/activity2/: clean_data.py  config.py  download_data.py  eda_plots.py  main.py
src/activity2/data/: clean.py  download.py  loader.py
src/activity2/eda/: plots.py
src/activity2/evaluation/: metrics.py  operational.py  plots.py  shap_explainer.py  style.py
src/activity2/models/: base.py  baselines.py  logreg.py  random_forest.py  xgboost_clf.py
src/activity2/pipelines/: compare_imbalance.py  compare_imputations.py  crash_focus.py  final_evaluation.py  run_all.py  tune_models.py
src/activity2/preprocessing/: imbalance.py  imputation.py
