[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "pypdf>=6.10.2",
]
