[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chronos-forecasting>=2.2.2",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shap>=0.51.0",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "xgboost>=3.2.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "pypdf>=6.10.2",
]
